Multiple fixes to issues found with error-prone.