@@ -8,6 +8,7 @@ import com.google.gson.stream.JsonWriter;
 
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
@@ -51,11 +52,10 @@ public class NamedBitsetAdapter<T> extends TypeAdapter<T> {
         return Optional.of(reader.nextBoolean());
       case NUMBER:
         return Optional.of(reader.nextInt() != 0);
+      default:
+        reader.skipValue();
+        return Optional.absent();
     }
-
-    reader.skipValue();
-
-    return Optional.absent();
   }
 
   protected void setField(T target, String name, boolean value) throws IllegalAccessException {
@@ -72,6 +72,7 @@ public class NamedBitsetAdapter<T> extends TypeAdapter<T> {
     }
   }
 
+  @Override
   public T read(JsonReader reader) throws IOException {
 
     JsonToken next = reader.peek();
@@ -82,7 +83,7 @@ public class NamedBitsetAdapter<T> extends TypeAdapter<T> {
     }
 
     try {
-      T obj = clazz.newInstance();
+      T obj = clazz.getDeclaredConstructor().newInstance();
       reader.beginObject();
 
       next = reader.peek();
@@ -100,11 +101,15 @@ public class NamedBitsetAdapter<T> extends TypeAdapter<T> {
       reader.endObject();
       return obj;
 
-    } catch (InstantiationException | IllegalAccessException e) {
+    } catch (InstantiationException
+        | IllegalAccessException
+        | NoSuchMethodException
+        | InvocationTargetException e) {
       throw new IOException("Reflection error", e);
     }
   }
 
+  @Override
   public void write(JsonWriter writer, T value) throws IOException {
 
     if (value == null) {
